--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           nekoweb-api-key: ${{ secrets.NEKOWEB_API_KEY }}
           nekoweb-cookie: ${{ secrets.NEKOWEB_COOKIE }}
-          nekoweb-domain: 'deploy.nekoweb.org'
-          nekoweb-username: 'deploy'
-          directory: 'public'
+          nekoweb-domain: 'shayuki.nekoweb.org'
+          nekoweb-username: 'shayuki'
+          directory: 'shayuki.nekoweb.org/'
